# lt25-sparse-rtrl

./: .gitignore  README.md  main.py  models-eqx.py  models.py  models1.py  pyproject.toml  requirements.txt
dataloaders/: base.py  basic.py  dataloading.py  toy.py
ipynbs/: plot-from-wandb.ipynb  simmanager plots.ipynb
plot/: interactive-Js.py  interactive-Ms.py  plot-states.py  sparsity-vs-t.py
test/: test-jacobian.py
