[project]
name = "sparse-rtrl"
version = "0.1.0"
description = ""
authors = [{ name = "Anand", email = "anandtrex@users.noreply.github.com" }]
requires-python = ">3.10, <4.0"
readme = "README.md"
dependencies = [
    "equinox",
    "optax",
    "pyyaml",
    "ipdb>=0.13.13",
    "wandb>=0.21.0",
    "ml-collections>=1.1.0",
    "haliax",
    "jaxpruner",
    "jax[cuda12]",
    "datasets",
    "flax",
    "jaxlib",
    "pydub",
    "scikit-learn>=1.7.0",
    "tensorflow",
    "tensorflow-datasets",
    "torch",
    "torchaudio>=2.7.0",
    "torchtext",
    "torchvision>=0.22.0",
    "tqdm",
]

[tool.uv]

[tool.uv.sources]
haliax = { git = "https://github.com/stanford-crfm/haliax.git" }
jaxpruner = { git = "https://github.com/google-research/jaxpruner.git" }

[tool.hatch.build.targets.sdist]
include = ["sparse_rtrl"]

[tool.hatch.build.targets.wheel]
include = ["sparse_rtrl"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
